@@ -3,6 +3,20 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specic language governing permissions and
+ * limitations under the License.
+ */
+
+/*
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
@@ -49,6 +63,7 @@ import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingDeque;
 
 import app.metatron.discovery.AbstractRestIntegrationTest;
+import app.metatron.discovery.TestEngineIngestion;
 import app.metatron.discovery.TestUtils;
 import app.metatron.discovery.common.GlobalObjectMapper;
 import app.metatron.discovery.common.datasource.DataType;
@@ -58,12 +73,10 @@ import app.metatron.discovery.core.oauth.OAuthTestExecutionListener;
 import app.metatron.discovery.domain.datasource.connection.jdbc.MySQLConnection;
 import app.metatron.discovery.domain.datasource.data.SearchQueryRequest;
 import app.metatron.discovery.domain.datasource.ingestion.BatchPeriod;
-import app.metatron.discovery.domain.datasource.ingestion.DiscardRule;
 import app.metatron.discovery.domain.datasource.ingestion.HdfsIngestionInfo;
 import app.metatron.discovery.domain.datasource.ingestion.HiveIngestionInfo;
 import app.metatron.discovery.domain.datasource.ingestion.LocalFileIngestionInfo;
 import app.metatron.discovery.domain.datasource.ingestion.RealtimeIngestionInfo;
-import app.metatron.discovery.domain.datasource.ingestion.ReplaceRule;
 import app.metatron.discovery.domain.datasource.ingestion.file.CsvFileFormat;
 import app.metatron.discovery.domain.datasource.ingestion.file.ExcelFileFormat;
 import app.metatron.discovery.domain.datasource.ingestion.file.JsonFileFormat;
@@ -73,9 +86,16 @@ import app.metatron.discovery.domain.datasource.ingestion.jdbc.BatchIngestionInf
 import app.metatron.discovery.domain.datasource.ingestion.jdbc.JdbcIngestionInfo;
 import app.metatron.discovery.domain.datasource.ingestion.jdbc.LinkIngestionInfo;
 import app.metatron.discovery.domain.datasource.ingestion.jdbc.SingleIngestionInfo;
+import app.metatron.discovery.domain.datasource.ingestion.rule.DiscardNullRule;
+import app.metatron.discovery.domain.datasource.ingestion.rule.GeoPointRule;
+import app.metatron.discovery.domain.datasource.ingestion.rule.ReplaceNullRule;
+import app.metatron.discovery.domain.scheduling.engine.DataSourceCheckJobIntegrationTest;
 import app.metatron.discovery.domain.workbook.configurations.datasource.DefaultDataSource;
 import app.metatron.discovery.domain.workbook.configurations.field.DimensionField;
 import app.metatron.discovery.domain.workbook.configurations.field.MeasureField;
+import app.metatron.discovery.domain.workbook.configurations.format.GeoPointFormat;
+import app.metatron.discovery.domain.workbook.configurations.format.TemporaryTimeFormat;
+import app.metatron.discovery.domain.workbook.configurations.format.UnixTimeFormat;
 import app.metatron.discovery.util.JsonPatch;
 import app.metatron.discovery.util.PolarisUtils;
 
@@ -127,7 +147,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void dataSourceList() {
     // @formatter:off
     Response createResponse =
@@ -144,7 +164,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void dataSourceDetail() {
     // @formatter:off
     Response createResponse =
@@ -158,6 +178,89 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
       .statusCode(HttpStatus.SC_OK)
 //      .body("id", any(String.class))
     .log().all();
+    // @formatter:on
+  }
+
+  @Test
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
+  @Sql("/sql/test_datasource_list.sql")
+  public void findDataSourceIngestionHistories() {
+
+    String dataSourceId = "ds-test-01";
+
+    // @formatter:off
+    given()
+      .auth().oauth2(oauth_token)
+      .contentType(ContentType.JSON)
+      .param("status", "running")
+      .log().all()
+    .when()
+      .get("/api/datasources/{id}/histories", dataSourceId)
+    .then()
+      .log().all()
+      .statusCode(HttpStatus.SC_OK);
+    // @formatter:on
+  }
+
+  @Test
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
+  @Sql("/sql/test_datasource_list.sql")
+  public void findDataSourceIngestionHistoryLog() {
+
+    String dataSourceId = "ds-test-01";
+    String historyId = "100001";
+    String offset = "-8000";
+
+    // @formatter:off
+    given()
+      .auth().oauth2(oauth_token)
+      .contentType(ContentType.JSON)
+      .param("offset", offset)
+    .when()
+      .get("/api/datasources/{id}/histories/{historyId}/log", dataSourceId, historyId)
+    .then()
+      .log().all()
+      .statusCode(HttpStatus.SC_OK);
+    // @formatter:on
+  }
+
+  @Test
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
+  @Sql("/sql/test_datasource_list.sql")
+  public void resetDataSourceIngestion() {
+
+    String dataSourceId = "ds-test-01";
+    String historyId = "100011";
+
+    // @formatter:off
+    given()
+      .auth().oauth2(oauth_token)
+      .contentType(ContentType.JSON)
+    .when()
+      .post("/api/datasources/{id}/histories/{historyId}/reset", dataSourceId, historyId)
+    .then()
+      .log().all()
+      .statusCode(HttpStatus.SC_OK);
+    // @formatter:on
+  }
+
+  @Test
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
+  @Sql("/sql/test_datasource_list.sql")
+  public void stopDataSourceIngestion() {
+
+    String dataSourceId = "ds-test-01";
+    String historyId = "100011";
+
+    // @formatter:off
+    given()
+      .auth().oauth2(oauth_token)
+      .contentType(ContentType.JSON)
+    .when()
+      .post("/api/datasources/{id}/histories/{historyId}/stop", dataSourceId, historyId)
+    .then()
+      .log().all()
+      .statusCode(HttpStatus.SC_OK);
     // @formatter:on
   }
 
@@ -180,10 +283,10 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
 
 
     DataSource dataSource = new DataSourceBuilder()
-            .name("DataSource")
-            .type(MASTER)
-            .ownerId("polaris")
-            .fields(f1, f2, f3).build();
+        .name("DataSource")
+        .type(MASTER)
+        .ownerId("polaris")
+        .fields(f1, f2, f3).build();
 
     dataSource.setConnType(ENGINE);
     dataSource.setSrcType(NONE);
@@ -261,7 +364,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_ADMIN", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_ADMIN", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceWithMapType() throws JsonProcessingException {
 
     Field field1 = new Field("id", DataType.STRING, DIMENSION, 1L);
@@ -275,11 +378,11 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     field2.setMappedField(Sets.newHashSet(field3, field4));
 
     DataSource dataSource1 = new DataSourceBuilder()
-            .name("datasource1")
-            .fields(
-              field1, field2
-            )
-            .build();
+        .name("datasource1")
+        .fields(
+            field1, field2
+        )
+        .build();
 
     System.out.println("################\n" + GlobalObjectMapper.writeValueAsString(dataSource1));
 
@@ -316,7 +419,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
 
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_ADMIN", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_ADMIN", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceAndAddDeleteWorkspaceReference() throws JsonProcessingException {
 
     TestUtils.printTestTitle("1. Create Datasoucre!");
@@ -401,7 +504,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   @Sql({"/sql/test_datasource_list.sql"})
   public void findByMultipleIds() {
 
@@ -420,7 +523,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   @Sql({"/sql/test_datasource_list.sql", "/scripts/default_join_datasource.sql"})
   public void findDataSources() {
 
@@ -452,7 +555,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   @Sql({"/sql/test_datasource_list.sql"})
   public void findDetailDataSources() {
 
@@ -475,8 +578,8 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
-//  @Sql({"/scripts/default_datasource_ingestion_options.sql"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
+  //  @Sql({"/scripts/default_datasource_ingestion_options.sql"})
   public void findDataSourceIngestionOptions() {
 
     // @formatter:off
@@ -495,14 +598,14 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void getDataFromDataSources() {
 
     String datasourceId = "ds-37";
 
-//    SearchQueryRequest request = new SearchQueryRequest();
-//    request.setFilters(Lists.newArrayList(new InclusionFilter("Category", Lists.newArrayList("Office Supplies"))));
-//    request.setLimits(new Limit(100));
+    //    SearchQueryRequest request = new SearchQueryRequest();
+    //    request.setFilters(Lists.newArrayList(new InclusionFilter("Category", Lists.newArrayList("Office Supplies"))));
+    //    request.setLimits(new Limit(100));
 
     // @formatter:off
     given()
@@ -520,7 +623,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void findByDataSourceSearchInWorkspace() {
 
     // @formatter:off
@@ -539,7 +642,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void patchDataSource() throws JsonProcessingException {
 
 
@@ -570,12 +673,12 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void uploadLocalExcelFileAndQuerySheet() {
 
     String filePath = "./src/test/resources/ingestion/";
     File file = new File(filePath + "sample_ingestion.xlsx");
-//    File file = new File(filePath + "export.xlsx");
+    //    File file = new File(filePath + "export.xlsx");
 
     // 파일업로드
     // @formatter:off
@@ -610,12 +713,12 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void uploadLocalCsvFileAndQuery() {
 
-//    String filePath = "./src/test/resources/ingestion/";
-//    File file = new File(filePath + "sample_ingestion.csv");
-        File file = new File("/Users/kyungtaak/Downloads/citycsv.csv");
+    //    String filePath = "./src/test/resources/ingestion/";
+    //    File file = new File(filePath + "sample_ingestion.csv");
+    File file = new File("/Users/kyungtaak/Downloads/citycsv.csv");
 
     // 파일업로드
     // @formatter:off
@@ -651,7 +754,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   @Sql("/sql/sales_hive.sql")
   public void findDataSourceByDatabaseName() throws JsonProcessingException {
 
@@ -668,7 +771,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void searchDataSourceByKeyword() throws JsonProcessingException {
 
     DataSource dataSource1 = new DataSourceBuilder()
@@ -706,7 +809,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void searchDataSourceByQuery() throws JsonProcessingException {
 
     DataSource dataSource1 = new DataSourceBuilder()
@@ -766,7 +869,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceWithNoneIngestion() throws JsonProcessingException {
 
     DataSource dataSource = new DataSource();
@@ -779,7 +882,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(NONE);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
@@ -808,7 +911,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceWithContext() throws JsonProcessingException {
 
     TestUtils.printTestTitle("1. 최초 DataSource 생성시 Context 지정");
@@ -822,7 +925,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(NONE);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
@@ -925,7 +1028,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceWithLinkType() throws JsonProcessingException {
 
     DataSource dataSource = new DataSource();
@@ -938,7 +1041,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(JDBC);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
@@ -984,7 +1087,61 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
+  public void createDataSourceWithLocalJsonFileIngestion() throws JsonProcessingException {
+
+    String targetFile = getClass().getClassLoader().getResource("ingestion/sample_ingestion.json").getPath();
+
+    DataSource dataSource = new DataSource();
+    dataSource.setName("localJsonFileIngestion_" + PolarisUtils.randomString(5));
+    dataSource.setDsType(MASTER);
+    dataSource.setConnType(ENGINE);
+    dataSource.setGranularity(DAY);
+    dataSource.setSegGranularity(MONTH);
+    dataSource.setSrcType(FILE);
+
+    List<Field> fields = Lists.newArrayList();
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
+    fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
+    fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
+    fields.add(new Field("nd", DataType.STRING, DIMENSION, 3L));
+    fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 4L));
+    fields.add(new Field("m2", DataType.DOUBLE, MEASURE, 5L));
+
+    dataSource.setFields(fields);
+
+    LocalFileIngestionInfo localFileIngestionInfo = new LocalFileIngestionInfo();
+    localFileIngestionInfo.setPath(targetFile);
+
+    List<JsonFileFormat.JsonFlatten> flattenRules = Lists.newArrayList();
+    flattenRules.add(new JsonFileFormat.JsonFlatten("nd", "$.nested.dim2"));
+    localFileIngestionInfo.setFormat(new JsonFileFormat(flattenRules));
+
+    dataSource.setIngestion(GlobalObjectMapper.writeValueAsString(localFileIngestionInfo));
+
+    String reqBody = GlobalObjectMapper.writeValueAsString(dataSource);
+
+    System.out.println(reqBody);
+
+    // @formatter:off
+    Response dsRes =
+    given()
+      .auth().oauth2(oauth_token)
+      .contentType(ContentType.JSON)
+      .body(reqBody)
+      .log().all()
+    .when()
+      .post("/api/datasources");
+
+    dsRes.then()
+      .statusCode(HttpStatus.SC_CREATED)
+    .log().all();
+    // @formatter:on
+
+  }
+
+  @Test
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceWithLocalCsvFileIngestion() throws JsonProcessingException {
 
     String targetFile = getClass().getClassLoader().getResource("ingestion/sample_ingestion_space.csv").getPath();
@@ -998,17 +1155,21 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(FILE);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+
+    Field timestampField = new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L);
+    timestampField.setFormat("yyyy-MM-dd");
+    fields.add(timestampField);
+
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
 
     Field field1 = new Field("sd", DataType.STRING, DIMENSION, 2L);
-    field1.setRemoved(true);
+    field1.setUnloaded(true);
     fields.add(field1);
 
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
 
     Field field2 = new Field("m2", DataType.DOUBLE, MEASURE, 4L);
-    field2.setRemoved(true);
+    field2.setUnloaded(true);
     fields.add(field2);
 
     dataSource.setFields(fields);
@@ -1042,7 +1203,257 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
+  public void createDataSourceWithLocalCsvFileIngestionByAsync() throws JsonProcessingException {
+
+    StompHeaders stompHeaders = new StompHeaders();
+    stompHeaders.set("X-AUTH-TOKEN", oauth_token);
+
+    StompSession session = null;
+    try {
+      session = stompClient
+          .connect("ws://localhost:{port}/stomp", webSocketHttpHeaders, stompHeaders, new StompSessionHandlerAdapter() {}, serverPort)
+          .get(3, SECONDS);
+    } catch (Exception e) {
+      e.printStackTrace();
+    }
+
+    String targetFile = getClass().getClassLoader().getResource("ingestion/sample_ingestion_space.csv").getPath();
+
+    DataSource dataSource = new DataSource();
+    dataSource.setName("localFileIngestion_" + PolarisUtils.randomString(5));
+    dataSource.setDsType(MASTER);
+    dataSource.setConnType(ENGINE);
+    dataSource.setGranularity(DAY);
+    dataSource.setSegGranularity(MONTH);
+    dataSource.setSrcType(FILE);
+
+    List<Field> fields = Lists.newArrayList();
+
+    Field timestampField = new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L);
+    timestampField.setFormat("yyyy-MM-dd");
+    fields.add(timestampField);
+
+    fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
+
+    Field field1 = new Field("sd", DataType.STRING, DIMENSION, 2L);
+    field1.setUnloaded(true);
+    fields.add(field1);
+
+    fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
+
+    Field field2 = new Field("m2", DataType.DOUBLE, MEASURE, 4L);
+    field2.setUnloaded(true);
+    fields.add(field2);
+
+    dataSource.setFields(fields);
+
+    LocalFileIngestionInfo localFileIngestionInfo = new LocalFileIngestionInfo();
+    localFileIngestionInfo.setPath(targetFile);
+    localFileIngestionInfo.setRemoveFirstRow(false);
+    localFileIngestionInfo.setFormat(new CsvFileFormat("\u0020", "\n"));
+
+    dataSource.setIngestion(GlobalObjectMapper.writeValueAsString(localFileIngestionInfo));
+
+    String reqBody = GlobalObjectMapper.writeValueAsString(dataSource);
+
+    System.out.println(reqBody);
+
+    // @formatter:off
+    Response dsRes =
+    given()
+      .auth().oauth2(oauth_token)
+      .contentType(ContentType.JSON)
+      .body(reqBody)
+      .log().all()
+    .when()
+      .post("/api/datasources");
+
+    dsRes.then()
+      .statusCode(HttpStatus.SC_CREATED)
+    .log().all();
+    // @formatter:on
+
+    String id = from(dsRes.asString()).get("id");
+
+    StompHeaders stompSubscribeHeaders = new StompHeaders();
+    stompSubscribeHeaders.setDestination("/topic/datasources/" + id + "/progress");
+    stompSubscribeHeaders.set("X-AUTH-TOKEN", oauth_token);
+
+    session.subscribe(stompSubscribeHeaders, new DefaultStompFrameHandler());
+
+    try {
+      System.out.println("Sleep!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!");
+      Thread.sleep(1000000);
+    } catch (InterruptedException e) {
+      e.printStackTrace();
+    }
+
+  }
+
+  @Test
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
+  public void createDataSourceWithGeoCsvFileIngestionByAsync() throws JsonProcessingException {
+
+    StompHeaders stompHeaders = new StompHeaders();
+    stompHeaders.set("X-AUTH-TOKEN", oauth_token);
+
+    StompSession session = null;
+    try {
+      session = stompClient
+          .connect("ws://localhost:{port}/stomp", webSocketHttpHeaders, stompHeaders, new StompSessionHandlerAdapter() {}, serverPort)
+          .get(3, SECONDS);
+    } catch (Exception e) {
+      e.printStackTrace();
+    }
+
+    String targetFile = getClass().getClassLoader().getResource("ingestion/sample_ingestion_estate.csv").getPath();
+
+    DataSource dataSource = new DataSource();
+    dataSource.setName("localFileIngestion_geo_" + PolarisUtils.randomString(5));
+    dataSource.setDsType(MASTER);
+    dataSource.setConnType(ENGINE);
+    dataSource.setGranularity(DAY);
+    dataSource.setSegGranularity(MONTH);
+    dataSource.setSrcType(FILE);
+
+    List<Field> fields = Lists.newArrayList();
+
+    Field timestampField = new Field("current_time", DataType.TIMESTAMP, TIMESTAMP, 0L);
+    timestampField.setDerived(true);
+    timestampField.setFormat(GlobalObjectMapper.writeValueAsString(new TemporaryTimeFormat()));
+    fields.add(timestampField);
+
+    fields.add(new Field("idx", DataType.STRING, DIMENSION, 1L));
+    fields.add(new Field("gu", DataType.STRING, DIMENSION, 2L));
+    fields.add(new Field("py", DataType.DOUBLE, MEASURE, 3L));
+    fields.add(new Field("amt", DataType.DOUBLE, MEASURE, 4L));
+
+    Field lonField = new Field("x", DataType.DOUBLE, DIMENSION, 4L);
+    lonField.setUnloaded(true);
+    fields.add(lonField);
+
+    Field latField = new Field("y", DataType.DOUBLE, DIMENSION, 4L);
+    latField.setUnloaded(true);
+    fields.add(latField);
+
+    fields.add(new Field("addr", DataType.STRING, DIMENSION, 5L));
+
+    Field locationField = new Field("location", DataType.STRUCT, DIMENSION, 4L);
+    locationField.setLogicalType(LogicalType.GEO_POINT);
+    locationField.setDerived(true);
+    locationField.setDerivationRule(GlobalObjectMapper.writeValueAsString(new GeoPointRule(null, latField.getName(), lonField.getName())));
+    locationField.setIngestionRule(GlobalObjectMapper.writeValueAsString(new DiscardNullRule()));
+    locationField.setFormat(GlobalObjectMapper.writeValueAsString(new GeoPointFormat("EPSG:4301", null)));
+    fields.add(locationField);
+
+    dataSource.setFields(fields);
+
+    LocalFileIngestionInfo localFileIngestionInfo = new LocalFileIngestionInfo();
+    localFileIngestionInfo.setPath(targetFile);
+    localFileIngestionInfo.setRemoveFirstRow(false);
+    localFileIngestionInfo.setFormat(new CsvFileFormat(",", "\n"));
+
+    dataSource.setIngestion(GlobalObjectMapper.writeValueAsString(localFileIngestionInfo));
+
+    String reqBody = GlobalObjectMapper.writeValueAsString(dataSource);
+
+    System.out.println(reqBody);
+
+    // @formatter:off
+    Response dsRes =
+    given()
+      .auth().oauth2(oauth_token)
+      .contentType(ContentType.JSON)
+      .body(reqBody)
+      .log().all()
+    .when()
+      .post("/api/datasources");
+
+    dsRes.then()
+      .statusCode(HttpStatus.SC_CREATED)
+    .log().all();
+    // @formatter:on
+
+    String id = from(dsRes.asString()).get("id");
+
+    StompHeaders stompSubscribeHeaders = new StompHeaders();
+    stompSubscribeHeaders.setDestination("/topic/datasources/" + id + "/progress");
+    stompSubscribeHeaders.set("X-AUTH-TOKEN", oauth_token);
+
+    session.subscribe(stompSubscribeHeaders, new DefaultStompFrameHandler());
+
+    try {
+      System.out.println("Sleep!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!");
+      Thread.sleep(1000000);
+    } catch (InterruptedException e) {
+      e.printStackTrace();
+    }
+
+  }
+
+  @Test
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
+  public void createDataSourceWithLocalCsvFileIngestion_UnixTimestamp() throws JsonProcessingException {
+
+    String targetFile = getClass().getClassLoader().getResource("ingestion/sample_ingestion_unix_timestamp_millis.csv").getPath();
+
+    DataSource dataSource = new DataSource();
+    dataSource.setName("localFileIngestion_unix_" + PolarisUtils.randomString(5));
+    dataSource.setDsType(MASTER);
+    dataSource.setConnType(ENGINE);
+    dataSource.setGranularity(DAY);
+    dataSource.setSegGranularity(MONTH);
+    dataSource.setSrcType(FILE);
+
+    List<Field> fields = Lists.newArrayList();
+
+    Field timestampField = new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L);
+    timestampField.setFormat(GlobalObjectMapper.writeValueAsString(new UnixTimeFormat()));
+
+    fields.add(timestampField);
+    fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
+
+    Field field1 = new Field("sd", DataType.STRING, DIMENSION, 2L);
+    fields.add(field1);
+
+    fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
+
+    Field field2 = new Field("m2", DataType.DOUBLE, MEASURE, 4L);
+    fields.add(field2);
+
+    dataSource.setFields(fields);
+
+    LocalFileIngestionInfo localFileIngestionInfo = new LocalFileIngestionInfo();
+    localFileIngestionInfo.setPath(targetFile);
+    localFileIngestionInfo.setRemoveFirstRow(false);
+    localFileIngestionInfo.setFormat(new CsvFileFormat(",", "\n"));
+
+    dataSource.setIngestion(GlobalObjectMapper.writeValueAsString(localFileIngestionInfo));
+
+    String reqBody = GlobalObjectMapper.getDefaultMapper().writeValueAsString(dataSource);
+
+    System.out.println(reqBody);
+
+    // @formatter:off
+    Response dsRes =
+    given()
+      .auth().oauth2(oauth_token)
+      .contentType(ContentType.JSON)
+      .body(reqBody)
+      .log().all()
+    .when()
+      .post("/api/datasources");
+
+    dsRes.then()
+      .statusCode(HttpStatus.SC_CREATED)
+    .log().all();
+    // @formatter:on
+
+  }
+
+  @Test
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void appendDataSourceWithLocalCsvFileIngestion() throws JsonProcessingException {
 
     // profile 을 h2-in-memory-db -> h2-default-db 로 변경, initial 삭제
@@ -1075,7 +1486,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceWithLocalExcelFileIngestion() throws JsonProcessingException {
 
     String targetFile = getClass().getClassLoader().getResource("ingestion/sample_ingestion.xlsx").getPath();
@@ -1089,7 +1500,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(FILE);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sd", DataType.TEXT, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
@@ -1126,7 +1537,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceWithRealTimeIngestion() throws JsonProcessingException {
 
     DataSource dataSource = new DataSource();
@@ -1138,7 +1549,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(REALTIME);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("event_time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("event_time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d1", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("d2", DataType.STRING, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
@@ -1146,15 +1557,14 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
 
     dataSource.setFields(fields);
 
-    RealtimeIngestionInfo ingestionInfo = new RealtimeIngestionInfo();
-    ingestionInfo.setRollup(false);
-    ingestionInfo.setFormat(new JsonFileFormat());
-    ingestionInfo.setConsumerType(RealtimeIngestionInfo.ConsumerType.KAFKA);
-    ingestionInfo.setTopic("test_topic");
-
     Map<String, Object> consumeProperties = Maps.newHashMap();
     consumeProperties.put("bootstrap.servers", "localhost:9092");
-    ingestionInfo.setConsumerProperties(consumeProperties);
+
+    RealtimeIngestionInfo ingestionInfo = new RealtimeIngestionInfo("test_topic",
+                                                                    consumeProperties,
+                                                                    new JsonFileFormat(),
+                                                                    false,
+                                                                    null, null);
 
     dataSource.setIngestion(GlobalObjectMapper.writeValueAsString(ingestionInfo));
 
@@ -1178,11 +1588,23 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceWithHdfsFileIngestion() throws JsonProcessingException {
 
+    StompHeaders stompHeaders = new StompHeaders();
+    stompHeaders.set("X-AUTH-TOKEN", oauth_token);
+
+    StompSession session = null;
+    try {
+      session = stompClient
+          .connect("ws://localhost:{port}/stomp", webSocketHttpHeaders, stompHeaders, new StompSessionHandlerAdapter() {}, serverPort)
+          .get(3, SECONDS);
+    } catch (Exception e) {
+      e.printStackTrace();
+    }
+
     // 사전에 HDFS 경로에 파일 위치
-    String targetFile = "/Users/kyungtaak/sample_ingestion.csv";
+    String targetFile = "/test/sample_ingestion.csv";
 
     DataSource dataSource = new DataSource();
     dataSource.setName("HdfsFileIngestion");
@@ -1193,7 +1615,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(HDFS);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
@@ -1232,9 +1654,24 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
       .post("/api/datasources");
 
     dsRes.then()
-//      .statusCode(HttpStatus.SC_CREATED)
+      .statusCode(HttpStatus.SC_CREATED)
     .log().all();
     // @formatter:on
+
+    String id = from(dsRes.asString()).get("id");
+
+    StompHeaders stompSubscribeHeaders = new StompHeaders();
+    stompSubscribeHeaders.setDestination("/topic/datasources/" + id + "/progress");
+    stompSubscribeHeaders.set("X-AUTH-TOKEN", oauth_token);
+
+    session.subscribe(stompSubscribeHeaders, new DefaultStompFrameHandler());
+
+    try {
+      System.out.println("Sleep!!");
+      Thread.sleep(1000000);
+    } catch (InterruptedException e) {
+      e.printStackTrace();
+    }
 
   }
 
@@ -1254,7 +1691,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(HDFS);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
@@ -1300,11 +1737,23 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceWithHiveCsvNonPartitionTableIngestion() throws JsonProcessingException {
 
+    StompHeaders stompHeaders = new StompHeaders();
+    stompHeaders.set("X-AUTH-TOKEN", oauth_token);
+
+    StompSession session = null;
+    try {
+      session = stompClient
+          .connect("ws://localhost:{port}/stomp", webSocketHttpHeaders, stompHeaders, new StompSessionHandlerAdapter() {}, serverPort)
+          .get(3, SECONDS);
+    } catch (Exception e) {
+      e.printStackTrace();
+    }
+
     // 사전에 HDFS 경로에 파일 위치
-    String sourceTable = "default.sample_ingestion_types";
+    String sourceTable = "default.sample_ingestion";
 
     DataSource dataSource = new DataSource();
     dataSource.setName("Hive Ingestion CSV None Partition " + PolarisUtils.randomString(5));
@@ -1315,17 +1764,15 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(HIVE);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
     fields.add(new Field("m2", DataType.DOUBLE, MEASURE, 4L));
-    fields.add(new Field("m3", DataType.DOUBLE, MEASURE, 5L));
-    fields.add(new Field("d1", DataType.STRING, DIMENSION, 6L));
 
     dataSource.setFields(fields);
 
-    Map<String,Object> context = Maps.newHashMap();
+    Map<String, Object> context = Maps.newHashMap();
 
     HiveIngestionInfo hiveIngestionInfo = new HiveIngestionInfo(
         new CsvFileFormat(),
@@ -1357,119 +1804,25 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     .log().all();
     // @formatter:on
 
-    //Spec
-    /*
+    String id = from(dsRes.asString()).get("id");
 
-    {
-   "type":"index_hadoop",
-   "spec":{
-      "dataSchema":{
-         "dataSource":"hive_ingestion_csv_none_partition_ijmha",
-         "parser":{
-            "type":"string",
-            "parseSpec":{
-               "format":"csv",
-               "dimensionsSpec":{
-                  "dimensions":[
-                     "d",
-                     "sd"
-                  ],
-                  "dimensionExclusions":[
+    StompHeaders stompSubscribeHeaders = new StompHeaders();
+    stompSubscribeHeaders.setDestination("/topic/datasources/" + id + "/progress");
+    stompSubscribeHeaders.set("X-AUTH-TOKEN", oauth_token);
 
-                  ],
-                  "spatialDimensions":[
+    session.subscribe(stompSubscribeHeaders, new DefaultStompFrameHandler());
 
-                  ]
-               },
-               "timestampSpec":{
-                  "column":"time",
-                  "format":"auto",
-                  "replaceWrongColumn":false
-               },
-               "columns":[
-                  "time",
-                  "d",
-                  "sd",
-                  "m1",
-                  "m2",
-                  "m3"
-               ]
-            }
-         },
-         "metricsSpec":[
-            {
-               "type":"count",
-               "name":"count"
-            },
-            {
-               "type":"sum",
-               "name":"m1",
-               "fieldName":"m1",
-               "inputType":"double"
-            },
-            {
-               "type":"sum",
-               "name":"m2",
-               "fieldName":"m2",
-               "inputType":"double"
-            },
-            {
-               "type":"sum",
-               "name":"m3",
-               "fieldName":"m3",
-               "inputType":"double"
-            }
-         ],
-         "granularitySpec":{
-            "type":"uniform",
-            "segmentGranularity":"MONTH",
-            "queryGranularity":"DAY",
-            "intervals":[
-               "1970-01-01/2050-01-01"
-            ]
-         }
-      },
-      "ioConfig":{
-         "type":"hadoop",
-         "inputSpec":{
-            "type":"hive",
-            "source":"default.sample_ingestion_types",
-            "metastoreUri":"thrift://localhost:9083"
-         }
-      },
-      "tuningConfig":{
-         "type":"hadoop",
-         "ingestionMode":"REDUCE_MERGE",
-         "useCombiner":false,
-         "jobProperties":{
-            "mapreduce.map.memory.mb":"4096",
-            "mapreduce.task.files.preserve.filepattern":".*",
-            "mapreduce.reduce.memory.mb":"4096",
-            "keep.task.files.pattern":".*",
-            "mapreduce.map.java.opts":"-server -Xmx4096m -Duser.timezone=UTC -Dfile.encoding=UTF-8 -XX:+PrintGCDetails -XX:+PrintGCTimeStamps",
-            "mapreduce.reduce.java.opts":"-server -Xmx4096m -Duser.timezone=UTC -Dfile.encoding=UTF-8 -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"
-         },
-         "buildV9Directly":true,
-         "maxRowsInMemory":3000000,
-         "maxOccupationInMemory":1024000000,
-         "maxShardLength":256000000,
-         "partitionsSpec":{
-            "type":"sized",
-            "targetPartitionSize":0
-         }
-      }
-   },
-   "context":{
-
-   }
-}
-
-  */
+    try {
+      System.out.println("Sleep!!");
+      Thread.sleep(1000000);
+    } catch (InterruptedException e) {
+      e.printStackTrace();
+    }
 
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceWithOrcNonPartitionHiveTableIngestion() throws JsonProcessingException {
 
     // 사전에 HDFS 경로에 파일 위치
@@ -1484,7 +1837,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(HIVE);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
@@ -1494,17 +1847,17 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
 
     dataSource.setFields(fields);
 
-    Map<String,Object> context = Maps.newHashMap();
-//    context.put(HiveIngestionInfo.KEY_ORC_SCHEMA, "struct<time:date,d:string,sd:string,m1:double,m2:double>");
+    Map<String, Object> context = Maps.newHashMap();
+    //    context.put(HiveIngestionInfo.KEY_ORC_SCHEMA, "struct<time:date,d:string,sd:string,m1:double,m2:double>");
 
     HiveIngestionInfo hiveIngestionInfo = new HiveIngestionInfo(
-            new OrcFileFormat(), //new CsvFileFormat(),
-            sourceTable,
-            null,
-            null,
-            null,
-            null,
-            context);
+        new OrcFileFormat(), //new CsvFileFormat(),
+        sourceTable,
+        null,
+        null,
+        null,
+        null,
+        context);
     dataSource.setIngestion(GlobalObjectMapper.writeValueAsString(hiveIngestionInfo));
 
     String reqBody = GlobalObjectMapper.writeValueAsString(dataSource);
@@ -1632,7 +1985,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceWithHiveOrcPartitionTableIngestion() throws JsonProcessingException {
 
     // 사전에 HDFS 경로에 파일 위치
@@ -1647,28 +2000,28 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(HIVE);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
     fields.add(new Field("m2", DataType.DOUBLE, MEASURE, 4L));
     dataSource.setFields(fields);
 
-    Map<String,Object> context = Maps.newHashMap();
+    Map<String, Object> context = Maps.newHashMap();
 
     List<String> intervals = Lists.newArrayList("2017-01-01/2017-12-01");
 
-    List<Map<String,Object>> partitions = Lists.newArrayList();
+    List<Map<String, Object>> partitions = Lists.newArrayList();
     partitions.add(TestUtils.makeMap("ym", "201704"));
 
     HiveIngestionInfo hiveIngestionInfo = new HiveIngestionInfo(
-            new OrcFileFormat(), //new CsvFileFormat(),
-            sourceTable,
-            partitions,
-            null,
-            null,
-            intervals,
-            context);
+        new OrcFileFormat(), //new CsvFileFormat(),
+        sourceTable,
+        partitions,
+        null,
+        null,
+        intervals,
+        context);
 
     dataSource.setIngestion(GlobalObjectMapper.writeValueAsString(hiveIngestionInfo));
 
@@ -1694,7 +2047,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void appendDataSourceWithHiveOrcPartitionTableIngestion() throws JsonProcessingException {
 
     // 사전에 HDFS 경로에 파일 위치
@@ -1703,7 +2056,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
 
     List<String> intervals = Lists.newArrayList("2016-04-01/2017-12-01");
 
-    List<Map<String,Object>> partitions = Lists.newArrayList();
+    List<Map<String, Object>> partitions = Lists.newArrayList();
     partitions.add(TestUtils.makeMap("ym", "201705"));
 
     HiveIngestionInfo hiveIngestionInfo = new HiveIngestionInfo(
@@ -1735,13 +2088,13 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createDataSourceWithHiveTableIngestion() throws JsonProcessingException {
 
     // 사전에 HDFS 경로에 파일 위치
     String sourceTable = "default.sample_ingestion_orc";
-//    String metastoreUri = "thrift://localhost:9083";
-//    String typeString = "struct<time:date,d:string,sd:string,m1:double,m2:double>";
+    //    String metastoreUri = "thrift://localhost:9083";
+    //    String typeString = "struct<time:date,d:string,sd:string,m1:double,m2:double>";
 
     DataSource dataSource = new DataSource();
     dataSource.setName("Hive File Ingestion orc " + PolarisUtils.randomString(5));
@@ -1752,7 +2105,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(HIVE);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
@@ -1768,22 +2121,22 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     //    jobProp.put("mapreduce.map.memory.mb", "1024");
     //    jobProp.put("mapreduce.map.cpu.vcores", "1");
 
-    Map<String,Object> context = Maps.newHashMap();
-//    context.put(HiveIngestionInfo.KEY_HIVE_METASTORE, metastoreUri);
-//    context.put(HiveIngestionInfo.KEY_ORC_SCHEMA, typeString);
+    Map<String, Object> context = Maps.newHashMap();
+    //    context.put(HiveIngestionInfo.KEY_HIVE_METASTORE, metastoreUri);
+    //    context.put(HiveIngestionInfo.KEY_ORC_SCHEMA, typeString);
 
-    List<Map<String,Object>> partitions = Lists.newArrayList();
+    List<Map<String, Object>> partitions = Lists.newArrayList();
     partitions.add(TestUtils.makeMap("ym", "201704", "dd", "21"));
     partitions.add(TestUtils.makeMap("ym", "201705"));
 
     HiveIngestionInfo hiveIngestionInfo = new HiveIngestionInfo(
-            new OrcFileFormat(), //new CsvFileFormat(),
-            sourceTable,
-            partitions,
-            null,
-            null,
-            null,
-            context);
+        new OrcFileFormat(), //new CsvFileFormat(),
+        sourceTable,
+        partitions,
+        null,
+        null,
+        null,
+        context);
 
     dataSource.setIngestion(GlobalObjectMapper.writeValueAsString(hiveIngestionInfo));
 
@@ -1809,7 +2162,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   @Sql("/sql/test_dataconnection.sql")
   public void createDataSourceWithJdbcSingleIngestion() throws JsonProcessingException {
 
@@ -1824,7 +2177,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(JDBC);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
@@ -1865,9 +2218,95 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
 
   }
 
+  @Test
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
+  @Sql("/sql/test_dataconnection.sql")
+  public void createDataSourceWithJdbcSingleIngestionByAsync() throws JsonProcessingException {
+
+    StompHeaders stompHeaders = new StompHeaders();
+    stompHeaders.set("X-AUTH-TOKEN", oauth_token);
+
+    StompSession session = null;
+    try {
+      session = stompClient
+          .connect("ws://localhost:{port}/stomp", webSocketHttpHeaders, stompHeaders, new StompSessionHandlerAdapter() {}, serverPort)
+          .get(3, SECONDS);
+    } catch (Exception e) {
+      e.printStackTrace();
+    }
+
+    String connectionId = "mysql-connection";
+
+    DataSource dataSource = new DataSource();
+    dataSource.setName("localJDBCIngestion");
+    dataSource.setDsType(MASTER);
+    dataSource.setConnType(ENGINE);
+    dataSource.setGranularity(DAY);
+    dataSource.setSegGranularity(MONTH);
+    dataSource.setSrcType(JDBC);
+
+    List<Field> fields = Lists.newArrayList();
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
+    fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
+    fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
+    fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
+    fields.add(new Field("m2", DataType.DOUBLE, MEASURE, 4L));
+
+    dataSource.setFields(fields);
+
+    SingleIngestionInfo singleJdbcInfo = new SingleIngestionInfo();
+
+    singleJdbcInfo.setDataType(JdbcIngestionInfo.DataType.TABLE);
+    singleJdbcInfo.setDatabase("polaris_datasources");
+    singleJdbcInfo.setQuery("sample_ingestion");
+    singleJdbcInfo.setMaxLimit(3);
+    singleJdbcInfo.setRollup(false);
+
+    dataSource.setIngestion(GlobalObjectMapper.writeValueAsString(singleJdbcInfo));
+
+    Map reqMap = GlobalObjectMapper.getDefaultMapper().convertValue(dataSource, Map.class);
+
+    // 추가 정보
+    reqMap.put("connection", "/api/connections/" + connectionId);
+
+    String reqBody = GlobalObjectMapper.writeValueAsString(reqMap);
+    System.out.println(reqBody);
+
+    // @formatter:off
+    Response dsRes =
+    given()
+      .auth().oauth2(oauth_token)
+      .contentType(ContentType.JSON)
+      .body(reqBody)
+      .log().all()
+    .when()
+      .post("/api/datasources");
+
+    dsRes.then()
+      .statusCode(HttpStatus.SC_CREATED)
+    .log().all();
+    // @formatter:on
+
+    String id = from(dsRes.asString()).get("id");
+
+    StompHeaders stompSubscribeHeaders = new StompHeaders();
+    stompSubscribeHeaders.setDestination("/topic/datasources/" + id + "/progress");
+    stompSubscribeHeaders.set("X-AUTH-TOKEN", oauth_token);
+
+    session.subscribe(stompSubscribeHeaders, new DefaultStompFrameHandler());
+
+    try {
+      System.out.println("Sleep!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!");
+      Thread.sleep(1000000);
+    } catch (InterruptedException e) {
+      e.printStackTrace();
+    }
+
+  }
+
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   @Sql("/sql/test_dataconnection.sql")
   public void createDataSourceWithIngestionOption() throws JsonProcessingException {
 
@@ -1883,14 +2322,14 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
 
     Field dimReplaceField = new Field("d", DataType.STRING, DIMENSION, 1L);
     dimReplaceField.setIngestionRule(
-        GlobalObjectMapper.writeValueAsString(new ReplaceRule("null_replace_test")));
+        GlobalObjectMapper.writeValueAsString(new ReplaceNullRule("null_replace_test")));
 
     Field dimDiscardField = new Field("sd", DataType.STRING, DIMENSION, 2L);
     dimDiscardField.setIngestionRule(
-        GlobalObjectMapper.writeValueAsString(new DiscardRule()));
+        GlobalObjectMapper.writeValueAsString(new DiscardNullRule()));
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(dimReplaceField);
     fields.add(dimDiscardField);
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
@@ -1932,9 +2371,8 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
 
-
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   @Sql("/sql/test_dataconnection.sql")
   public void createDataSourceWithJdbcBatchIngestion() throws JsonProcessingException, InterruptedException {
 
@@ -1949,7 +2387,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(JDBC);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("time", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("d", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sd", DataType.STRING, DIMENSION, 2L));
     fields.add(new Field("m1", DataType.DOUBLE, MEASURE, 3L));
@@ -1962,10 +2400,10 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     batchJdbcInfo.setDataType(JdbcIngestionInfo.DataType.TABLE);
     batchJdbcInfo.setDatabase("polaris_datasources");
     batchJdbcInfo.setQuery("sample_ingestion");
-//    batchJdbcInfo.setPeriod(new BatchPeriod("MINUTELY", 1, null, null));
-//    batchJdbcInfo.setPeriod(new BatchPeriod("WEEKLY", null, "03:20", Lists.newArrayList("MON", "SUN")));
+    //    batchJdbcInfo.setPeriod(new BatchPeriod("MINUTELY", 1, null, null));
+    //    batchJdbcInfo.setPeriod(new BatchPeriod("WEEKLY", null, "03:20", Lists.newArrayList("MON", "SUN")));
     batchJdbcInfo.setPeriod(new BatchPeriod("EXPR", "0 0/1 * 1/1 * ? *", null, null));
-    batchJdbcInfo.setSize(100);
+    batchJdbcInfo.setMaxLimit(100);
 
     // Add Connection Info
     MySQLConnection dataConnection = new MySQLConnection();
@@ -1979,10 +2417,10 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
 
     dataSource.setIngestion(GlobalObjectMapper.writeValueAsString(batchJdbcInfo));
 
-//    Map reqMap = GlobalObjectMapper.getDefaultMapper().convertValue(dataSource, Map.class);
-//    // 추가 정보
-//    reqMap.put("connection", "/api/connections/" + connectionId);
-//    String reqBody = GlobalObjectMapper.writeValueAsString(reqMap);
+    //    Map reqMap = GlobalObjectMapper.getDefaultMapper().convertValue(dataSource, Map.class);
+    //    // 추가 정보
+    //    reqMap.put("connection", "/api/connections/" + connectionId);
+    //    String reqBody = GlobalObjectMapper.writeValueAsString(reqMap);
 
     String reqBody = GlobalObjectMapper.writeValueAsString(dataSource);
 
@@ -2019,12 +2457,12 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     // @formatter:on
 
 
-    Thread.sleep(5*60*1000L);
+    Thread.sleep(5 * 60 * 1000L);
   }
 
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   @Sql("/sql/test_dataconnection.sql")
   public void dataconnectionToDataSource() throws JsonProcessingException {
 
@@ -2046,7 +2484,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void importAvailableDataSourceNames() {
 
     // @formatter:off
@@ -2063,7 +2501,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void engineDatasourcePreview() {
 
     // @formatter:off
@@ -2082,7 +2520,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void engineDatasourceImport() {
 
     DataSource dataSource = new DataSource();
@@ -2111,7 +2549,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createTemporaryDatasourcesSync() throws JsonProcessingException {
 
     DataSource dataSource = new DataSource();
@@ -2145,7 +2583,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     ingestionInfo.setDataType(JdbcIngestionInfo.DataType.TABLE);
     ingestionInfo.setDatabase("sample");
     ingestionInfo.setQuery("sales");
-//    ingestionInfo.setFormat(new CsvFileFormat());
+    //    ingestionInfo.setFormat(new CsvFileFormat());
 
     dataSource.setIngestion(GlobalObjectMapper.writeValueAsString(ingestionInfo));
 
@@ -2181,7 +2619,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void createTemporaryDatasourcesAsync() throws JsonProcessingException {
 
     StompHeaders stompHeaders = new StompHeaders();
@@ -2264,7 +2702,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   @Sql("/sql/test_datasource_temporary.sql")
   public void createTemporaryDatasourceByIdSync() throws JsonProcessingException {
 
@@ -2335,7 +2773,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
   @Sql("/sql/test_datasource_temporary.sql")
   public void createTemporaryDatasourceByIdASync() throws JsonProcessingException {
 
@@ -2400,7 +2838,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
 
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void dataSourceFieldTimeFormatCheck() throws JsonProcessingException {
 
     TimeFormatCheckRequest request = new TimeFormatCheckRequest();
@@ -2428,7 +2866,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void dataSourceFieldFindTimeFormat() throws JsonProcessingException {
 
     TimeFormatCheckRequest request = new TimeFormatCheckRequest();
@@ -2456,7 +2894,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
   }
 
   @Test
-  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_WRITE_DATASOURCE"})
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "ROLE_PERM_SYSTEM_MANAGE_DATASOURCE"})
   public void dataSourceValidateCronExpression() throws JsonProcessingException {
 
     String cronExpr = "0 0 0/1 1/1 * ? *";
@@ -2493,7 +2931,7 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
     dataSource.setSrcType(JDBC);
 
     List<Field> fields = Lists.newArrayList();
-    fields.add(new Field("orderdate", DataType.TIMESTAMP, TIMESTAMP,0L));
+    fields.add(new Field("orderdate", DataType.TIMESTAMP, TIMESTAMP, 0L));
     fields.add(new Field("category", DataType.STRING, DIMENSION, 1L));
     fields.add(new Field("sales", DataType.DOUBLE, MEASURE, 2L));
 
@@ -2531,6 +2969,133 @@ public class DataSourceRestIntegrationTest extends AbstractRestIntegrationTest {
             .statusCode(HttpStatus.SC_CREATED)
             .log().all();
     // @formatter:on
+  }
+
+  @Test
+  @OAuthRequest(username = "polaris", value = {"ROLE_SYSTEM_USER", "PERM_SYSTEM_MANAGE_DATASOURCE"})
+  @Sql({"/sql/test_datasource_field.sql"})
+  public void synchronizeFieldsInDataSource() throws InterruptedException {
+    // given
+    final String engineDataSourceName = "testsampleds";
+    final String testDataSourceId = "7b8005ae-eca0-4a56-9072-c3811138c7a6";
+
+    setUpTestFixtureSchemaNotMatchedEngineDataSource(engineDataSourceName);
+
+    // REST
+    // when, then
+    given()
+        .auth().oauth2(oauth_token)
+        .contentType(ContentType.JSON)
+        .when()
+        .patch("/api/datasources/{id}/fields/sync", testDataSourceId)
+        .then()
+        .statusCode(HttpStatus.SC_NO_CONTENT)
+        .log().all();
+  }
+
+  private void setUpTestFixtureSchemaNotMatchedEngineDataSource(String engineDataSourceName) throws InterruptedException {
+    final TestEngineIngestion testEngineIngestion = new TestEngineIngestion();
+
+    final String workerHost = testEngineIngestion.getEngineWorkerHost();
+    final String baseDir = DataSourceCheckJobIntegrationTest.class.getResource("/ingestion/").getPath();
+    final String filter = "sample_ingestion_extends.csv";
+
+    final String ingestionSpec = "{\n" +
+        "  \"context\": {\n" +
+        "    \"druid.task.runner.dedicated.host\": \"" + workerHost + "\"\n" +
+        "  },\n" +
+        "  \"spec\": {\n" +
+        "    \"dataSchema\": {\n" +
+        "      \"dataSource\": \"" + engineDataSourceName + "\",\n" +
+        "      \"granularitySpec\": {\n" +
+        "        \"intervals\": [\n" +
+        "          \"1970-01-01/2050-01-01\"\n" +
+        "        ],\n" +
+        "        \"queryGranularity\": \"DAY\",\n" +
+        "        \"rollup\": true,\n" +
+        "        \"segmentGranularity\": \"MONTH\",\n" +
+        "        \"type\": \"uniform\"\n" +
+        "      },\n" +
+        "      \"metricsSpec\": [\n" +
+        "        {\n" +
+        "          \"name\": \"count\",\n" +
+        "          \"type\": \"count\"\n" +
+        "        },\n" +
+        "        {\n" +
+        "          \"fieldName\": \"m1\",\n" +
+        "          \"inputType\": \"double\",\n" +
+        "          \"name\": \"m1\",\n" +
+        "          \"type\": \"sum\"\n" +
+        "        },\n" +
+        "        {\n" +
+        "          \"fieldName\": \"m2\",\n" +
+        "          \"inputType\": \"double\",\n" +
+        "          \"name\": \"m2\",\n" +
+        "          \"type\": \"sum\"\n" +
+        "        },\n" +
+        "        {\n" +
+        "          \"fieldName\": \"m3\",\n" +
+        "          \"inputType\": \"double\",\n" +
+        "          \"name\": \"m3\",\n" +
+        "          \"type\": \"sum\"\n" +
+        "        }\n" +
+        "      ],\n" +
+        "      \"parser\": {\n" +
+        "        \"parseSpec\": {\n" +
+        "          \"columns\": [\n" +
+        "            \"time\",\n" +
+        "            \"d\",\n" +
+        "            \"sd\",\n" +
+        "            \"m1\",\n" +
+        "            \"m2\",\n" +
+        "            \"m3\",\n" +
+        "            \"p\"\n" +
+        "          ],\n" +
+        "          \"dimensionsSpec\": {\n" +
+        "            \"dimensionExclusions\": [],\n" +
+        "            \"dimensions\": [\n" +
+        "              \"d\",\n" +
+        "              \"sd\",\n" +
+        "              \"p\"\n" +
+        "            ],\n" +
+        "            \"spatialDimensions\": []\n" +
+        "          },\n" +
+        "          \"format\": \"csv\",\n" +
+        "          \"timestampSpec\": {\n" +
+        "            \"column\": \"time\",\n" +
+        "            \"format\": \"yyyy-MM-dd\",\n" +
+        "            \"replaceWrongColumn\": false\n" +
+        "          }\n" +
+        "        },\n" +
+        "        \"type\": \"string\"\n" +
+        "      }\n" +
+        "    },\n" +
+        "    \"ioConfig\": {\n" +
+        "      \"firehose\": {\n" +
+        "        \"baseDir\": \"" + baseDir + "\",\n" +
+        "        \"filter\": \"" + filter + "\",\n" +
+        "        \"type\": \"local\"\n" +
+        "      },\n" +
+        "      \"type\": \"index\"\n" +
+        "    },\n" +
+        "    \"tuningConfig\": {\n" +
+        "      \"buildV9Directly\": true,\n" +
+        "      \"ignoreInvalidRows\": true,\n" +
+        "      \"maxRowsInMemory\": 75000,\n" +
+        "      \"type\": \"index\"\n" +
+        "    }\n" +
+        "  },\n" +
+        "  \"type\": \"index\"\n" +
+        "}";
+
+    testEngineIngestion.ingestionLocalFile(engineDataSourceName, ingestionSpec);
+
+  }
+
+
+  public class DataSourceCreationStompHander extends StompSessionHandlerAdapter {
+    public void handleFrame(StompHeaders headers, Object payload) {
+    }
   }
 
 }
